clusters/building-blocks/other/apps/samba/app/samba-deploy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: samba
  name: samba
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: samba
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: samba
    spec:
      # securityContext:
      #   runAsNonRoot: true
      #   runAsUser: 1000
      #   runAsGroup: 1000
      #   fsGroup: 1000
      # fsGroupChangePolicy: OnRootMismatch
      # seccompProfile:
      # type: RuntimeDefault
      automountServiceAccountToken: false
      containers:
        - name: main
          image: ghcr.io/servercontainers/samba
          imagePullPolicy: IfNotPresent
          # livenessProbe:
          #   failureThreshold: 5
          #   httpGet:
          #     path: /health
          #     port: 8000
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 5
          ports:
            - containerPort: 137
              name: netbios-ns
              protocol: UDP
            - containerPort: 138
              name: netbios-dgm
              protocol: UDP
            - containerPort: 139
              name: netbios-ssn
              protocol: TCP
            - containerPort: 445
              name: smb
              protocol: TCP
          # readinessProbe:
          #   failureThreshold: 5
          #   httpGet:
          #     path: /health
          #     port: 8000
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
          #   successThreshold: 2
          #   timeoutSeconds: 5
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 10m
              memory: 50Mi
          # startupProbe:
          #   failureThreshold: 60
          #   httpGet:
          #     path: /health
          #     port: 8000
          #   initialDelaySeconds: 10
          #   periodSeconds: 5
          #   successThreshold: 1
          #   timeoutSeconds: 2
          volumeMounts:
            - mountPath: /mnt/data
              name: data
            - mountPath: /external/avahi
              name: avahi
              # securityContext:
              #   allowPrivilegeEscalation: false
              #   capabilities:
              #     drop:
              #       - ALL
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
        - name: data
          hostPath:
            path: /mnt/data
            type: Directory
        - name: avahi
          hostPath:
            path: /etc/avahi/services
            type: Directory
