clusters/building-blocks/other/apps/samba/app/samba-svc.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: samba
  namespace: default
  labels:
    app.kubernetes.io/name: samba
spec:
  type: LoadBalancer # ClusterIP # NodePort
  loadBalancerIP: "192.168.178.141"
  selector:
    app.kubernetes.io/name: samba
  ports:
    - name: netbios-ns
      port: 137
      protocol: UDP
    - name: netbios-dgm
      port: 138
      protocol: UDP
    - name: netbios-ssn
      port: 139
      protocol: TCP
    - name: smb
      port: 445
      protocol: TCP
