clusters/building-blocks/other/apps/samba/app/samba-ingressroute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroutetcp_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: samba
  namespace: default
  labels:
    app.kubernetes.io/name: samba
spec:
  entryPoints:
    - smb
  routes:
    - match: HostSNI(`*`)
      services:
        - name: samba
          namespace: default
          port: 445
